<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Go Read</string>
    <string name="book_info_activity">Book Info</string>
    
	<string name="empty_string"></string>
	<string name="search_hint">enter search query</string>

    <!-- BookmarksActivity -->
    <string name="bookmark_added">bookmark on page %1$s added</string>

	<!--  Bookshare_Webservice_login -->
	<string name="fetch_book_data">Fetching free books data.</string>
	<string name="authenticating">Authenticating</string>
    <string name="login_dialog_login_button">Log In</string>
    <string name="login_dialog_password_label">Password</string>
    <string name="login_dialog_reset_button">Reset</string>
    <string name="login_dialog_skip_login_button">Continue without logging in</string>
    <string name="login_dialog_username_label">Bookshare Email</string>
	<string name="login_error_non_blank_password">Password field cannot be blank!</string>
	<string name="login_error_non_blank_password_and_username">Username/Password field cannot be blank!</string>
	<string name="login_error_non_blank_username">Username field cannot be blank!</string>
	<string name="login_failed">Log in Failed!</string>
	<string name="login_network_error">Network Error</string>
    <string name="login_forgot_password">Forgot password</string>
    <string name="login_signup">Sign up!</string>

    
    <!-- Bookshare_Book_Details -->
    <string name="book_details_download_button">Download (text only)</string>
     <string name="book_details_download_images">Download book with images</string>
    <string name="book_details_download_error">Download Failed! Download again</string>
    <string name="book_details_download_error_other_member">Download Failed! Try another member</string>
    <string name="book_details_download_started">Download started</string>
    <string name="book_details_download_success">Book downloaded! Read Book</string>
    <string name="book_details_not_available">Not available</string>
    <string name="book_details_open_error">Error opening book!</string>
    <string name="bookshare_book_detail_publish_date">Date Added:\u0020</string>

    <!-- Bookshare_Books_Listing -->
    <string name="fetching_books">Fetching books. Please wait.</string>
    <string name="search_complete_with_books">Search complete. Books listing.</string>
    <string name="search_complete_no_books">Search complete. No books found.</string>

    <!-- Bookshare_Menu -->
    <string name="logout_dialog_message">Log out of the Bookshare catalog. Do you want to continue?</string>
    <string name="search_dialog_title_title">Search by Book Title</string>
    <string name="search_dialog_label_title">Enter Book title to be searched</string>
    <string name="search_dialog_example_title">E.g. Moby Dick or Potter</string>
    <string name="search_dialog_description_title">Enter title</string>
    <string name="search_dialog_title_author">Author Search</string>
    <string name="search_dialog_label_author">Enter author name to be searched</string>
    <string name="search_dialog_example_author">E.g. Mark Twain or Lewis</string>
    <string name="search_dialog_description_author">Enter author name</string>
    <string name="search_dialog_title_isbn">ISBN Search</string>
    <string name="search_dialog_label_isbn">Enter 10 or 13 digit ISBN</string>
    <string name="search_dialog_example_isbn"> </string>
    <string name="search_dialog_description_isbn">Enter ISBN</string>
    <string name="bks_menu_title_label">Title Search</string>
    <string name="bks_menu_title_description">Search by title</string>
    <string name="bks_menu_author_label">Author Search</string>
    <string name="bks_menu_author_description">Search by author</string>
    <string name="bks_menu_isbn_label">ISBN Search</string>
    <string name="bks_menu_isbn_description">Search by book\'s ISBN</string>
    <string name="bks_menu_latest_label">Latest Books</string>
    <string name="bks_menu_latest_description">List latest in the catalog</string>
    <string name="bks_menu_popular_label">Popular Books</string>
    <string name="bks_menu_popular_description">List popular books</string>
    <string name="bks_menu_log_in">Log In to Bookshare</string>
    <string name="bks_menu_log_out">Log Out of Bookshare</string>
    <string name="bks_menu_log_out_confirmation">Logged out!</string>
    <string name="bks_menu_no_internet">You must first enable internet connectivity!</string>
    <string name="empty_search_term_error">Search Term cannot be blank!</string>
    <string name="accessible_alert_title">Are you sure?</string>

    <!-- Bookshare Twitter Handler -->
    <string name="twitter_successful_post">Posted to Twitter</string>
    
    <!-- Bug Report Activity -->
    <string name="crash_report_sent">Sorry, we had an error. Support has been notified.</string>
    
    <!-- Cancel Activity -->
    <string name="cancel_menu_title">Leaving us? Choose below ...</string>
    
    <!-- FBReader -->
    <string name="navigate_dialog_title">Navigate to Page.</string>
    <string name="navigate_dialog_label">Enter page number.</string>
    <string name="navigate_dialog_example">Current %1$s page is %2$s of %3$s. %4$s</string>
    <string name="navigate_dialog_example_non_numeric">(has non numeric page numbers)</string>
    <string name="page_navigated">Page %1$s</string>

    <!-- AccessibleMainMenuActivity -->
    <string name="menu_speak">Read to Me</string>
    <string name="menu_bookshare">Get Bookshare Books</string>
    <string name="menu_toc">Table of Contents</string>
    <string name="menu_navigate">Navigate to Page</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_search">Search Book</string>
    <string name="menu_book_info">Book Info</string>
    <string name="menu_library">Downloaded Books</string>
    <string name="menu_network_library">Get Books From Other Catalogs</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_accessibility_settings">Accessibility Settings</string>
    <string name="menu_tts_settings">Text To Speech Settings</string>

    <!-- LibraryActivity -->
    <string name="library_search_books_popup">Search downloaded books?</string>
    <string name="library_added_to_favorites">Added to favorites</string>
    <string name="library_removed_from_favorites">Removed from favorites</string>

    <!-- NetworkLibraryActivity -->
    <string name="network_library_accessibility_warning">Other catalogs have not been made accessible to vision impaired users.</string>
    
    <!-- SpeakActivity -->
    <string name="play">Play/Pause</string>
    <string name="next">Next section</string>
    <string name="previous">Prev section</string>
    <string name="toc">Table of Contents</string>
    <string name="on_press_play">Play/Pause</string>
    <string name="on_press_pause">Pause/Play</string>
    <string name="speak_title_postfix">\u0020- press play or double click screen</string>

    <string name="initializing">Initializing&#8230;</string>
    <string name="failure">Initialization failed</string>
    <string name="speak_menu_item">Read to Me</string>
    <string name="no_tts_installed">Could not connect TTS engine on your device.</string>
    <string name="no_tts_language">TTS engine is missing default local voice.</string>
    <string name="initialization_error">Could not get book data</string>
    <string name="language_is_not_set">Book language is not set. Trying to read book in %0.</string>
    <string name="no_data_for_language" formatted="false">Text-to-speech data for %0 are not installed. Trying to read book in %1.</string>

    <!-- TOCActivity -->
    <string name="subheading">\u0020(has %1$d sub headings)</string>
    <string name="toc_view_subheadings">View sub headings</string>
    <string name="toc_close_subheadings">Close sub headings</string>
    <string name="toc_goto_heading">Go to heading</string>
    <string name="bks_menu_periodicals_label">Newspapers &amp; Magazines</string>
    <string name="fetching_periodicals">Fetching periodicals. Please wait.</string>
    <string name="search_complete_with_periodicals">Search complete. Periodicals listing.</string>
    <string name="login_to_continue">Please login to download this periodical.</string>
    <string name="edition_details_download_success">Periodical Downloaded! Read Periodical.</string>
    <string name="warning_no_general_downloads_for_periodicals">Warning! You are not logged in. Newspapers &amp; Magazines are not available for guests to download. Are you sure you want to continue? </string>
    <string name="share_with_friends">Share with friends!</string>
    <string name="subscription_chk_box">Subscribe to this periodical</string>
    <string name="subscribe_chkbox_description">(Automatically download the latest issue)</string>

</resources>
